# otto-tts

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
app/: main.py
app/api/: endpoints.py
app/core/: tts_engine.py
app/models/: tts.py
data/: settings.json
